<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/slider_image"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:paddingTop="30dp"
        android:src="@drawable/hand_booking_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/slider_heading"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:fontFamily="@font/gibson_regular"
        android:gravity="left"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="0dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="0dp"
        android:text="@string/first_slide_title"
        android:textColor="#99000000"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_image"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/slider_desc_n1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial_round"
        android:gravity="left"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:text="@string/first_slide_desc_n1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_heading"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/slider_desc_n2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arial_round"
        android:gravity="left"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:text="@string/first_slide_desc_n2"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_desc_n1"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/slider_desc_n3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arial_round"
        android:gravity="left"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:text="@string/first_slide_desc_n3"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_desc_n2"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>